--- a/WpfApp1/App.xaml
+++ b/WpfApp1/App.xaml
@@ -2,12 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp1"
+             xmlns:converters="clr-namespace:WpfApp1.Converters"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <converters:ItemsPathConverter x:Key="ItemsPathConverter" />
+            <converters:DisplayPathConverter x:Key="DisplayPathConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
