--- a/WpfApp1/Views/Controls/TreeViewControl.xaml
+++ b/WpfApp1/Views/Controls/TreeViewControl.xaml
@@ -2,15 +2,45 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:behaviors="clr-namespace:WpfApp1.Behaviors">
+             xmlns:behaviors="clr-namespace:WpfApp1.Behaviors"
+             xmlns:converters="clr-namespace:WpfApp1.Converters"
+             xmlns:global="clr-namespace:">
 
-    <TreeView ItemsSource="{Binding TreeViewModel.RootItems, RelativeSource={RelativeSource AncestorType=UserControl}}">
+    <UserControl.Resources>
+        <converters:TreeItemPropertyConverter x:Key="TreeItemPropertyConverter"/>
+        <global:TreeItemChildrenConverter x:Key="TreeItemChildrenConverter"/>
+    </UserControl.Resources>
+
+    <TreeView ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource AncestorType=UserControl}}">
         <b:Interaction.Behaviors>
-            <behaviors:TreeViewSelectedItemBehavior SelectedItem="{Binding TreeViewModel.SelectedItem, Mode=TwoWay, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+            <behaviors:TreeViewSelectedItemBehavior 
+                SelectedItem="{Binding SelectedItem, 
+                              Mode=TwoWay, 
+                              RelativeSource={RelativeSource AncestorType=UserControl}}"
+            />
         </b:Interaction.Behaviors>
         <TreeView.ItemTemplate>
-            <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                <TextBlock Text="{Binding Name}" />
+            <HierarchicalDataTemplate>
+                <ContentControl Content="{Binding}">
+                    <ContentControl.ContentTemplate>
+                        <DataTemplate>
+                            <TextBlock>
+                                <TextBlock.Text>
+                                    <MultiBinding Converter="{StaticResource TreeItemPropertyConverter}">
+                                        <Binding Path="." />
+                                        <Binding Path="DisplayPath" RelativeSource="{RelativeSource AncestorType=UserControl}" />
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                        </DataTemplate>
+                    </ContentControl.ContentTemplate>
+                </ContentControl>
+                <HierarchicalDataTemplate.ItemsSource>
+                    <MultiBinding Converter="{StaticResource TreeItemChildrenConverter}">
+                        <Binding Path="." />
+                        <Binding Path="ItemsPath" RelativeSource="{RelativeSource AncestorType=UserControl}" />
+                    </MultiBinding>
+                </HierarchicalDataTemplate.ItemsSource>
             </HierarchicalDataTemplate>
         </TreeView.ItemTemplate>
         <TreeView.ItemContainerStyle>
